First parallelization: create tasks to process GetEntry on each branch in parallel

--- a/tree/tree/CMakeLists.txt
+++ b/tree/tree/CMakeLists.txt
@@ -15,8 +15,12 @@ ROOT_USE_PACKAGE(hist/hist)
 ROOT_GENERATE_DICTIONARY(G__${libname} *.h MODULE ${libname} LINKDEF LinkDef.h OPTIONS "-writeEmptyRootPCM")
 #ROOT_GENERATE_DICTIONARY(ManualTree TTree.h  LINKDEF LinkDef2.h)
 
+INCLUDE_DIRECTORIES($ENV{INTEL_TBB}/include/)
+FIND_LIBRARY(LIBTBB tbb HINTS $ENV{INTEL_TBB}/lib/intel64/gcc4.4/)
+if(NOT LIBTBB)
+  message(FATAL_ERROR "Library tbb not found")
+endif()
 
-
-ROOT_LINKER_LIBRARY(${libname} *.cxx G__${libname}.cxx DEPENDENCIES Net RIO Thread)
+ROOT_LINKER_LIBRARY(${libname} *.cxx G__${libname}.cxx DEPENDENCIES Net RIO Thread ${LIBTBB})
 ROOT_INSTALL_HEADERS()
 
